Fixed hero images text responsive bug on mobile across all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -601,4 +601,29 @@ a:hover{
     .intro{
         margin-top: 30px;
     }
+
+    .head-text {
+        position: initial;
+        padding: 85px 0px;
+        height: 300px;
+        width: 300px;
+        margin: 10% auto;
+    }
+
+    .head-text h1,
+    .head-text h2{
+        font-size: 25px;
+    }
+
+    .head-text .btn-blue {
+        padding: 8px 0;
+    }
+
+    .of-image .head-text{
+        padding: 70px 0px;
+    }
+
+    .wwu-image .head-text{
+        background: rgba(0, 0, 0, 0.25);
+    }
 }
